--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <!-- you can add your custom stylesheet in this file -->
         <link rel="stylesheet" href="css/custom.css" />
+        <script src="js/main.js"></script>
     </head>
 
     <body>
@@ -141,124 +142,9 @@
             </div>
 
 
-       <!-- Footer Start-->
-<div class="dark-mode-texts bg-box-gradient-1 overflow-hidden position-relative">
-    <svg class="bg-wave-box-end" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-            fill="#fff"
-            fill-opacity="1"
-            d="M0,64L80,101.3C160,139,320,213,480,213.3C640,213,800,139,960,117.3C1120,96,1280,128,1360,144L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-    </svg>
-    <div class="container">
-        <div class="footer-section dark-mode-texts">
-            <div class="container">
-                <div class="footer-top pt-15 pt-lg-25 pb-lg-19">
-                    <div class="row">
-                        <div class="col-6 col-lg-4">
-                            <div class="footer-block mb-13 mb-lg-9">
-                                <div class="brand-logo mb-10">
-                                    <a href="#"><img src="image\logo-main-white.png" alt="" class="dark-version-logo" /></a>
-                                </div>
-                                <p>Our mission is to make life easier for our customers. We do it by offering easy to use, fast and reliable technology and support services.</p>
-                                <ul class="footer-contact-list list-unstyled">
-                                    <li>
-                                        <span class="badge coodiv-badge badge-warning rounded-pill coodiv-text-12 position-relative"><i class="far fa-envelope"></i> helpdesk@little.cloud</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="col-6 col-lg-2">
-                            <div class="footer-block mb-13 mb-lg-9">
-                                <h4 class="block-title coodiv-text-7 mb-7 position-relative">Services</h4>
-                                <ul class="footer-list list-unstyled">
-                                    <li class="py-2"><a class="footer-list-link" href="">Web Hosting</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Cloud Managment</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Access Control</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Branded Email</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Tech Support</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Development</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="col-6 col-lg-3 pl-lg-15">
-                            <div class="footer-block mb-13 mb-lg-9">
-                                <h4 class="block-title coodiv-text-7 mb-7 position-relative">Domains</h4>
-                                <ul class="footer-list list-unstyled">
-                                    <li class="py-2"><a class="footer-list-link" href="">Domain Checker</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Domain Transfer</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Domain Registration</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        
-                        <div class="col-6 col-lg-3 pl-lg-15">
-                            <div class="footer-block mb-13 mb-lg-9">
-                                <h4 class="block-title coodiv-text-7 mb-7 position-relative">Help</h4>
-                                <ul class="footer-list list-unstyled">
-                                    <li class="py-2"><a class="footer-list-link" href="">About Us</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Privacy Policy</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Terms & Conditions</a></li>
-                                    <li class="py-2"><a class="footer-list-link" href="">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="bottom-footer-area border-top pt-9 pb-8">
-                    <div class="row align-items-center">
-                        <div class="col-lg-8">
-                            <p class="copyright-text coodiv-text-11 mb-6 mb-lg-0 coodiv-text-color-opacity text-center text-lg-left">
-                                © 2021 Copyright, All Right Reserved, Made with <i class="coodiv-color-red-opacity-visible feather icon-heart-on mx-1"></i> by <a href="https://littlewebco.com/">Little Web Co</a>
-                                <i class="icon icon-heart-2-2 text-sky-blue align-middle ml-2"></i>
-                            </p>
-                        </div>
-                        <div class="col-lg-4 text-center text-lg-right">
-                            <ul class="payment-getway list-unstyled mb-0">
-                                <li class="ml-1"><img src="image/payment/visa.png" alt="" /></li>
-                                <li class="ml-1"><img src="image/payment/mastercard.png" alt="" /></li>
-                                <li class="ml-1"><img src="image/payment/discover.png" alt="" /></li>
-                                <li class="ml-1"><img src="image/payment/amex.png" alt="" /></li>
-                                <li class="ml-1"><img src="image/payment/jcb.png" alt="" /></li>
-                                <li class="ml-1"><img src="image/payment/maestro.png" alt="" /></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-
-<!-- START LIVE SUPPORT FIXED HEAD -->
-<a class="live-support-trigger" href="#" data-toggle="modal" data-target="#errormodal">
-<div class="support-agent"><img class="profile-pic" src="image/team/3.jpg" alt="support agent" /></div>
-<div class="live-support-welcome coodiv-text-12 font-weight-light shadow">How can i help you?</div>
-</a>
-<!-- END LIVE SUPPORT FIXED HEAD -->
-
-
-<!-- START LIVE SUPPORT MODEL -->
-<div class="modal fade" id="errormodal" role="dialog" aria-labelledby="errormodal" aria-hidden="true">
-<div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content rounded-20 border-opacity">
-        <div class="modal-body px-10 py-10 text-center">
-            <h3 class="coodiv-text-6">All of our support team are busy right now :(</h3>
-            <p class="coodiv-text-9 font-weight-light text-muted">please email helpdesk@little.cloud</p>
-            <div class="d-block mt-13">
-                <button href="mailto:helpdesk@little.cloud" type="button" class="btn btn-primary btn-curved mb-0 w-50 rounded-20">okay</button>
-                <button type="button" class="btn text-primary mb-0 rounded-20" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-<!-- END LIVE SUPPORT MODEL -->
+<!--\/\/ Leave Footer Here \/\/\/-->
+<div id="footer-container"></div>
+<!-- ^^^^^^^^^ -->
 
 <!-- Vendor Scripts -->
 <script src="js/vendor.min.js"></script>
