--- a/template-part/footer.html
+++ b/template-part/footer.html
@@ -23,10 +23,10 @@
             <div class="brand-logo mb-10">
                 <a href="#"><img src="image\logo-main-white.png" alt="" class="dark-version-logo" /></a>
             </div>
-            <p>Our mission is to make life easier for our customers. We do it by offering easy to use, fast and reliable technology and support services.</p>
+            <p></p>
             <ul class="footer-contact-list list-unstyled">
                 <li>
-                    <span class="badge coodiv-badge badge-warning rounded-pill coodiv-text-12 position-relative"><i class="far fa-envelope"></i> helpdesk@little.cloud</span>
+                    <span class="badge coodiv-badge badge-warning rounded-pill coodiv-text-12 position-relative"><i class="far fa-envelope"></i> help@little.domains</span>
                 </li>
             </ul>
         </div>
@@ -38,12 +38,11 @@
         <div class="footer-block mb-13 mb-lg-9">
             <h4 class="block-title coodiv-text-7 mb-7 position-relative">Services</h4>
             <ul class="footer-list list-unstyled">
-                <li class="py-2"><a class="footer-list-link" href="/web-hosting.html">Web Hosting</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Cloud Managment</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Access Control</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Branded Email</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://littlecloud.atlassian.net/servicedesk/customer/portal/4">Tech Support</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Development</a></li>
+                <li class="py-2"><a class="footer-list-link" href="/web-hosting.html">Domain Portofolio Management</a></li>
+                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">DNSSEC</a></li>
+                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">DNS Services</a></li>
+                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Web3 Domains</a></li>
+                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Handshake Domain Claiming</a></li>
             </ul>
         </div>
     </div>
@@ -82,7 +81,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <p class="copyright-text coodiv-text-11 mb-6 mb-lg-0 coodiv-text-color-opacity text-center text-lg-left">
-                                © 2021 Copyright, All Right Reserved, Made with <i class="coodiv-color-red-opacity-visible feather icon-heart-on mx-1"></i> by <a href="https://littlewebco.com/">Little Web Co</a>
+                                © 2024 Copyright, All Right Reserved, Made with <i class="coodiv-color-red-opacity-visible feather icon-heart-on mx-1"></i> by <a href="https://littlewebco.com/">Little Web Co</a>
                                 <i class="icon icon-heart-2-2 text-sky-blue align-middle ml-2"></i>
                             </p>
                         </div>
