--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name="description" content="Login to your hosting now" />
-    <meta property="og:site_name" content="Little Cloud" />
+    <meta property="og:site_name" content="Little Cloud | Cumulus Login" />
     <meta property="og:url" content="https://cu.little.cloud" />
+    <meta http-equiv = "refresh" content = "5; url = https://app.little.cloud />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Little Cloud | Cumulus" />
     <meta name="author" content="https://little.cloud" />
@@ -49,7 +50,6 @@
     <!-- MAIN CONTENT START-->
     <div id="hero-section-container"></div>
     <div id="hero-section-features-container"></div>
-    <div id="support-package"></div>
     <!-- MAIN CONTENT END-->
     <!--\/\/ Leave Footer Here \/\/\/-->
     <div id="footer-container"></div>
