--- a/template-part/hero-section.html
+++ b/template-part/hero-section.html
@@ -18,10 +18,9 @@
                 <!-- column -->
                 <!-- START MAIN CONTENTS -->
                 <div class="hero-content dark-mode-texts mb-15 mb-lg-10 text-center text-md-center">
-                    <h4 class="coodiv-text-12 text-uppercase mb-3 coodiv-color-green-opacity-7">a little goes a long way</h4>
-                    <h1 class="coodiv-text-3 text-white d-block mb-0">I'm looking for</h1>
-                    <h1 class="coodiv-text-3 position-relative mb-5"><span id="typed" class="strike-bottom d-inline-block"></span></h1>
-                    <p class="coodiv-text-9 px-7 mb-0 coodiv-color-white-opacity-9 mb-10">Human-to-Human Support when you need it</p>
+                    <h4 class="coodiv-text-12 text-uppercase mb-3 coodiv-color-green-opacity-7">Oops...</h4>
+                    <h1 class="coodiv-text-3 text-white d-block mb-0">You can't access <span id="currentDomain"></span> from here</h1>
+                    <p class="coodiv-text-9 px-7 mb-0 coodiv-color-white-opacity-9 mb-10">We're taking you to the login page</p>
                 </div>
                 <!-- END MAIN CONTENTS -->
             </div>
