--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Login to your hosting now" />
     <meta property="og:site_name" content="Little Cloud | Cumulus Login" />
     <meta property="og:url" content="https://cu.little.cloud" />
-    <meta http-equiv = "refresh" content = "5; url = https://app.little.cloud />
+    <meta http-equiv = "refresh" content = "5; url = https://app.little.cloud" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Little Cloud | Cumulus" />
     <meta name="author" content="https://little.cloud" />
