--- a/template-part/footer.html
+++ b/template-part/footer.html
@@ -36,13 +36,8 @@
     <!-- footer links -->
     <div class="col-6 col-lg-2">
         <div class="footer-block mb-13 mb-lg-9">
-            <h4 class="block-title coodiv-text-7 mb-7 position-relative">Services</h4>
+            <h4 class="block-title coodiv-text-7 mb-7 position-relative"></h4>
             <ul class="footer-list list-unstyled">
-                <li class="py-2"><a class="footer-list-link" href="/web-hosting.html">Domain Portofolio Management</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">DNSSEC</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">DNS Services</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Web3 Domains</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud">Handshake Domain Claiming</a></li>
             </ul>
         </div>
     </div>
@@ -51,9 +46,9 @@
     <!-- footer links -->
     <div class="col-6 col-lg-3 pl-lg-15">
         <div class="footer-block mb-13 mb-lg-9">
-            <h4 class="block-title coodiv-text-7 mb-7 position-relative">Domains</h4>
+            <h4 class="block-title coodiv-text-7 mb-7 position-relative">Links</h4>
             <ul class="footer-list list-unstyled">
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/cart.php?a=add&domain=register">Domain Checker</a></li>
+                <li class="py-2"><a class="footer-list-link" href="https://tracler.little.domains">Domain Checker</a></li>
                 <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
                 <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/cart.php?a=add&domain=register">Domain Registration</a></li>
             </ul>
@@ -64,13 +59,8 @@
     <!-- footer links -->
     <div class="col-6 col-lg-3 pl-lg-15">
         <div class="footer-block mb-13 mb-lg-9">
-            <h4 class="block-title coodiv-text-7 mb-7 position-relative">Help</h4>
+            <h4 class="block-title coodiv-text-7 mb-7 position-relative"></h4>
             <ul class="footer-list list-unstyled">
-                <li class="py-2"><a class="footer-list-link" href="/about.html">About Us</a></li>
-                <li class="py-2"><a class="footer-list-link" href="/privacy-policy.html">Privacy Policy</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/tos.php">Terms & Conditions</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/submitticket.php?step=2&deptid=1">Contact Us</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://littlecloud.atlassian.net/servicedesk/customer/portal/4">Raise a Ticket</a></li>
             </ul>
         </div>
     </div>
@@ -81,7 +71,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <p class="copyright-text coodiv-text-11 mb-6 mb-lg-0 coodiv-text-color-opacity text-center text-lg-left">
-                                © 2024 Copyright, All Right Reserved, Made with <i class="coodiv-color-red-opacity-visible feather icon-heart-on mx-1"></i> by <a href="https://littlewebco.com/">Little Web Co</a>
+                                © 2024 Copyright, All Right Reserved, Made with <i class="coodiv-color-red-opacity-visible feather icon-heart-on mx-1"></i> by <a href="https://little.cloud/">Little Cloud</a>
                                 <i class="icon icon-heart-2-2 text-sky-blue align-middle ml-2"></i>
                             </p>
                         </div>
