--- a/template-part/footer.html
+++ b/template-part/footer.html
@@ -46,11 +46,8 @@
     <!-- footer links -->
     <div class="col-6 col-lg-3 pl-lg-15">
         <div class="footer-block mb-13 mb-lg-9">
-            <h4 class="block-title coodiv-text-7 mb-7 position-relative">Links</h4>
+            <h4 class="block-title coodiv-text-7 mb-7 position-relative"></h4>
             <ul class="footer-list list-unstyled">
-                <li class="py-2"><a class="footer-list-link" href="https://tracler.little.domains">Domain Checker</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
-                <li class="py-2"><a class="footer-list-link" href="https://app.little.cloud/cart.php?a=add&domain=register">Domain Registration</a></li>
             </ul>
         </div>
     </div>
