--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Little Cloud | Cumulus" />
     <meta name="author" content="https://little.cloud" />
-    <title>Little Cloud | Cumulus Login</title>
+    <title>Little Cloud | Host Login</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="image/favicon/favicon.png" type="image/x-icon" />
