--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://cu.little.cloud" />
     <meta http-equiv="refresh" id="refreshMeta" content="url=https://app.little.cloud" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Little Cloud | Cumulus" />
+    <meta property="og:title" content="Little Hosting" />
     <meta name="author" content="https://little.cloud" />
     <title>Little Cloud | Host Login</title>
 
