--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:site_name" content="Little Cloud | Cumulus Login" />
     <meta property="og:url" content="https://cu.little.cloud" />
     <meta http-equiv="refresh" id="refreshMeta" content="url=https://app.little.cloud" />
+    <meta name="robots" content="noindex, nofollow">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Little Hosting" />
     <meta name="author" content="https://little.cloud" />
