--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <meta name="description" content="Login to your hosting now" />
-    <meta property="og:site_name" content="Little Cloud | Cumulus Login" />
-    <meta property="og:url" content="https://cu.little.cloud" />
-    <meta http-equiv="refresh" id="refreshMeta" content="url=https://app.little.cloud" />
-    <meta name="robots" content="noindex, nofollow">
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Little Hosting" />
-    <meta name="author" content="https://little.cloud" />
-    <title>Site not found</title>
+    <meta charset="utf-8">
+<!-- Uncomment the below line for a redirect -->
+<meta http-equiv="refresh" content="10; url=https://little.cloud">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site Not Found - Little Cloud</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -231,11 +224,18 @@
     <div class="container">
         <header class="header">
             <h1 class="title">Site Not Found</h1>
-            <p class="subtitle">The page you're looking for isn't available right now.</p>
-        </header>
+<!-- Uncomment the below line for a redirect snippet -->
+           <p class="subtitle">
+    The page you're looking for isn't available right now.<br>
+    Redirecting in <span id="countdown">10</span> seconds...
+</p>
+   </header>
 
         <div class="contact-info">
             If you're the site owner, please contact your hosting provider:
+            <a href="[% data.url FILTER html %]" target="_blank" rel="noopener noreferrer" class="contact-link" id="dynamicProviderLink">
+                [% data.name FILTER html %]
+            </a>
         </div>
 
         <div class="card-grid">
@@ -267,5 +267,19 @@
             <img src="https://little.cloud/assets/img/logo.svg" alt="Little Cloud">
         </a>
     </footer>
+
+<script>
+    let timeLeft = 10;
+    const countdownElement = document.getElementById('countdown');
+    
+    const countdown = setInterval(() => {
+        timeLeft--;
+        countdownElement.textContent = timeLeft;
+        
+        if (timeLeft <= 0) {
+            clearInterval(countdown);
+        }
+    }, 1000);
+</script>
 </body>
 </html>
