--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <!-- Uncomment the below line for a redirect -->
 <meta http-equiv="refresh" content="10; url=https://little.cloud">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Not Found - Little Cloud</title>
+    <meta name="robots" content="noindex, nofollow">
+    <title>Little Cloud</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
