--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
    </header>
 
         <div class="contact-info">
-            If you're the site owner, please contact your hosting provider:
-            <a href="[% data.url FILTER html %]" target="_blank" rel="noopener noreferrer" class="contact-link" id="dynamicProviderLink">
-                [% data.name FILTER html %]
+            If you're the site owner, please contact your hosting provider.
             </a>
         </div>
 
